# superduper

./: .buildinfo  .cdc.tokens  .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README_ja.md  README_zh.md  VERSION  classification.html  cluster.html  common_issues.html  concepts.html  config.json  data_references.html  default-configs.json  dev.Dockerfile  docker-compose.yml  encoders.html  full_usage.html  genindex.html  getting_started.html  index.html  jobs.html  llm_finetune.py  models.html  (+26 more)
.binder/: apt.txt  postBuild  requirements.txt  start.py  start.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.doctrees/: classification.doctree  cluster.doctree  common_issues.doctree  concepts.doctree  data_references.doctree  encoders.doctree  full_usage.doctree  getting_started.doctree  index.doctree  jobs.doctree  models.doctree  prediction_and_training.doctree  vector_index.doctree  watchers.doctree
.github/: config.yml  pull_request_template.md  release-notes.md
Question_the_docs/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
_component.model.test/: component.json
_modules/: dataclasses.html  index.html  subprocess.html
_sources/: data_references.md.txt  full_usage.md.txt  jobs.md.txt  vector_index.md.txt
_static/: pygments.css
apidocs/: banner.txt  conf.py
background/: common_issues.html  index.html
docs/: Makefile  README.md  classification.md  cluster.md  cluster.rst  common_issues.md  concepts.md  concepts.rst  conf.py  content.rst  dev_n_demo_setup.md  docusaurus.config.js  encoders.md  full_usage.rst  get_started.md  getting_started.md  getting_started.rst  imputations.rst  index.md  index.rst  inserting_data.rst  jobs.rst  minimum_working_example.rst  models.md  models.rst  overview.rst  package-lock.json  package-lock.json.REMOVED.git-id  package.json  prediction_and_training.md  requirements.txt  robots.txt  semantic_indexes.rst  sidebars.js  training.rst  types.rst  watchers.md
examples/: .gitignore  README.md  chat_with_your_database.ipynb  coco_find.py  coco_insert.py  compare_vector_search_solutions.html  ebay_insert.py  index.html  llm_finetune.py  losses.py  measures.py  metrics.py  mnist_clean.html  mnist_torch.ipynb  mnist_torch.ipynb.REMOVED.git-id  models.py  mongo_cdc.html  multimodal_image_search_clip.html  multimodal_image_search_clip.ipynb  multimodal_image_search_clip.ipynb.REMOVED.git-id  openai.html  pgvector.ipynb  question_the_docs copy.ipynb  question_the_docs.ipynb  question_the_docs.ipynb.REMOVED.git-id  question_the_docs_opensource.ipynb  sandbox-example.ipynb  sandbox_example.ipynb  sentiment_analysis_use_case.html  snowflake-example.ipynb  splitters.py  sql-example.ipynb  transfer_learning.ipynb  transfer_learning_declarative.ipynb  types.py  vector_search.ipynb  video_search.ipynb  video_search.ipynb.REMOVED.git-id  voice_memos.html  voice_memos.ipynb  (+2 more)
getting_started/: configuration.html  features.html  index.html  installation.html  minimum_working_example.html
infrastructure/: architecture.html  change_data_capture.html  client_server.html  cluster.html  index.html  jobs.html  single_host_cluster.html
mymodels/: classifiers.py  embeddings.py  extractors.py  serializer.py
newdocs/: docusaurus.config.js  package-lock.json.REMOVED.git-id  package.json
notebooks/: Sentiment-analysis-use-case.ipynb  Untitled.ipynb  blog_version_multimodal_image_search_clip.ipynb  compare-vector-search-solutions.ipynb  compare_multimodal_image_search_clip_openclip.ipynb  compare_vector_search_solutions.ipynb  dc-gan.ipynb  ecommerce.ipynb.REMOVED.git-id  hello_world_iris.ipynb  index.rst  local-cluster.ipynb  mnist-notebook.ipynb  (+20 more)
plugins/anthropic/: README.md  pyproject.toml
plugins/anthropic/plugin_test/: test_model_anthropic.py
plugins/anthropic/superduper_anthropic/: __init__.py  model.py
plugins/groq/: README.md  pyproject.toml
plugins/groq/plugin_test/: test_model_groq.py
plugins/groq/plugin_test/cassettes/: test_chat_predict.yaml  test_chat_predict_batches.yaml  test_chat_predict_with_context.yaml
plugins/groq/superduper_groq/: __init__.py  model.py
plugins/lance/: pyproject.toml  requirements.txt
plugins/lance/plugin_test/: test_vector_searcher.py
plugins/lance/superduper_lance/: __init__.py  lance.py
plugins/mongodb/: README.md  pyproject.toml  requirements.txt
plugins/mongodb/plugin_test/: __init__.py  config.yaml  conftest.py  test_artifact_store.py  test_atlas.py  test_databackend.py  test_metadata.py  test_mongodb_artifact.py  test_queries.py  test_query.py
plugins/mongodb/superduper_mongodb/: __init__.py  artifacts.py  data_backend.py  database_listener.py  metadata.py  query.py  utils.py  vector_search.py
plugins/openai/: README.md  pyproject.toml
plugins/openai/plugin_test/: test_model_openai.py
plugins/openai/plugin_test/cassettes/: test_batch_chat.yaml  test_batch_embed_async.yaml  test_chat_async.yaml  test_create_url.yaml  test_create_url_async_batch.yaml  test_edit_url_async_batch.yaml  test_edit_url_batch.yaml  test_embed.yaml  test_transcribe_async.yaml  test_translate.yaml  test_translate_async.yaml
plugins/openai/superduper_openai/: __init__.py  model.py
plugins/pillow/: README.md  pyproject.toml
plugins/pillow/plugin_test/: test_init.py  unittest.py
plugins/pillow/superduper_pillow/: __init__.py  encoder.py
plugins/pillow/test/: __init__.py
plugins/snowflake/: README.md  pyproject.toml
plugins/snowflake/plugin_test/: test_vector_search.py
plugins/snowflake/superduper_snowflake/: __init__.py  connect.py  data_backend.py  database_listener.py  query.py  schema.py  secrets.py  vector_search.py
plugins/sql/: README.md  pyproject.toml
plugins/sql/plugin_test/: config.yaml  conftest.py  test_databackend.py  test_query.py  test_sanity.py
plugins/sql/superduper_sql/: __init__.py  data_backend.py  database_listener.py  utils.py
(+3005 files in other folders)
