[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superduper-framework"
description = "Build compositional and declarative AI applications and agents"
readme = "README.md"
version = '0.6.0'
license = {file = "LICENSE"}
maintainers = [{name = "superduper.io, Inc.", email = "opensource@superduper.com"}]
keywords = [
    "databases",
    "mongodb",
    "data-science",
    "machine-learning",
    "mlops",
    "vector-database",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.16",
    "dill>=0.3.6",
    "loguru>=0.7.2",
    "loki-logger-handler==1.0.0",
    "networkx>=2.8.8",
    "requests>=2.22",  # lower bound from openai and boto3
    "tqdm>=4.64.1",
    "typer>=0.7.0",
    "pydantic>=1",
    "pygments",
    "numpy>=1.24.3",
    "overrides>=7",
    "tenacity>=8.1.0,<=8.2.3",
    "packaging",
    "prettytable",
    "python-dotenv",
    "PyYAML>=6.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.103.2",
    "ruamel.yaml>=0.18",
    "python-magic",
    "apscheduler",
    "python-multipart>=0.0.9",
    "httpx",
    "toml",
    "papermill>=2.6.0",
    "jupyter"
]

[project.optional-dependencies]
test = [
    "scikit-learn>=1.1.3",
    "pandas",
    "pre-commit",
    "black==25.1.0",
    "ruff==0.4.4",
    "mypy",
    "types-PyYAML",
    "types-requests",
    "interrogate",
    "pytest",
    "pytest-cov",
    "nbval>=0.10.0",
]

[project.urls]
homepage = "https://superduper.io"
documentation = "https://docs.superduper.io/docs/intro"
source = "https://github.com/superduper-io/superduper"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["superduper*"]

[tool.black]
skip-string-normalization = true
target-version = ["py38"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
disable_error_code = ["has-type", "attr-defined", "assignment", "misc", "override", "call-arg", "import-untyped", "no-redef", "valid-type", "valid-newtype"]

[tool.pytest.ini_options]
addopts = "-W ignore"

[tool.interrogate]
color = true
exclude = []
fail-under = 30.1
ignore-magic = true
ignore-nested-classes = false
ignore-nested-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-regex = []
ignore-semiprivate = true
omit-covered-files = true
quiet = false
verbose = 0
whitelist-regex = []

[tool.ruff.lint]
extend-select = [
    "I", # Missing required import (auto-fixable)
    "F", # PyFlakes
    #"W", # PyCode Warning
    "E", # PyCode Error
    #"N", # pep8-naming
    "D", # pydocstyle
]
ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in __init__
  "D105", # Missing docstring in magic method
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D213", # Multi-line docstring summary should start at the second line
  "D401",
  "D102",
  "E402",
  "F403",
  "E501", # Line too long
  "F401", # Removing lines of code
]
exclude = ["templates", "superduper/templates"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"test/**" = ["D"]

[project.entry-points."console_scripts"]
superduper = "superduper.__main__:run"
